# secure-api

./: .gitignore  .pre-commit-config.yaml  JWT_AUTHENTICATION_GUIDE.md  LEARNING_SESSION.md  Untitled-1.ipynb  main.py  pyproject.toml
auth/: security.py
database/: db.py  secure_api.db  seed.py
