[project]
name = "secure-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi==0.104.1",
    "uvicorn==0.24.0",
    "pydantic==2.5.0",
    "python-jose[cryptography]==3.3.0",
    "passlib==1.7.4",
    "sqlalchemy==2.0.23",
    "bcrypt==3.2.2"
]
